@@ -1,3 +1,10 @@
+Mon Dec 14 00:16:53 1998  Raph Levien  <raph@gimp.org>
+
+	* art_affine.c (art_affine_to_string): re-added the "scale" method
+	that was accidentally deleted before check-in.
+
+	* Makefile.am: added new files
+
 Sun Dec 13 00:52:39 1998  Raph Levien  <raph@gimp.org>
 
 	* art_affine.h:
